Fixing webcam configuration crash when index becomes less than zero

BUG: 311144